--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,10 +1,14 @@
 <html>
 	<head>
 		<title>Mi nueva aplicación</title>
+
+    <link rel="stylesheet" href="/static/bootstrap.css">
 	</head>
 	<body>
-		<h2>Mi aplicacion</h2>
-		<hr />
-		{% block content %}{% endblock %}
+    <div class="container">
+  		<h2>Mi aplicacion</h2>
+  		<hr />
+  		{% block content %}{% endblock %}
+    </div>
 	</body>
 </html>
